--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 title: Paula Vazquez
 
 logo: ./assets/photo-Paula-Vazquez.jpg
-description: Molecular Biology and Data Scientist
+description: Passionate Molecular Biologist and Data Scientist
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
