--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 theme: jekyll-theme-minimal
-title: Paula Vazquez
+title: Paula Vazquez CV
 
 logo: ./assets/photo-Paula-Vazquez.jpg
-description: Passionate Molecular Biologist and Data Scientist
+description: Molecular Biologist and Data Scientist
+paulavazq@gmail.com
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
