--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
+
+
 title: Paula Vazquez CV
 logo: ./assets/photo-Paula-Vazquez.jpg
 description: Molecular Biologist and Data Scientist
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
 
 
